import { actions } from '@storybook/addon-actions';
import { storiesOf } from '@storybook/vue';
import { TYPEAHEAD_NAME } from '@ulaval/modul-components/dist/components/component-names';
import TypeaheadPlugin from '@ulaval/modul-components/dist/components/typeahead/typeahead';
import Vue from 'vue';
import { modulComponentsHierarchyRootSeparator } from '../../../utils';

Vue.use(TypeaheadPlugin);

const RESULTS: string[] = ['Tomato', 'Celery', 'Apple', 'Bannana', 'Patate', 'Carrot', 'Avocados', 'Eggplant', 'Beet', 'Pineapple', 'Lemon', 'Pumpkin', 'Kiwi'];

storiesOf(`${modulComponentsHierarchyRootSeparator}${TYPEAHEAD_NAME}`, module)

    .add('Default', () => ({
        methods: actions(
            'input',
            'focus',
            'blur',
            'filter',
            'keydown',
            'keyup',
            'paste'
        ),
        data: () => ({
            label: 'Fruits and vegetables',
            results: RESULTS,
            value: ''
        }),
        template: `<div>
            <m-typeahead @input="input" @focus="focus" @blur="blur"  @filter-results="filter" @keydown="keydown" @keyup="keyup" @paste="paste" v-model="value" :label="label" :results="results"></m-typeahead>
            <p>v-model = {{ value }}</p>
            <h2 class="m-u--h5">Values</h2>
            <p v-html="results"></p>
        </div>`
    }))
    .add('max-results', () => ({
        data: () => ({
            label: 'Fruits and vegetables',
            results: RESULTS,
            value: '',
            maxResults: 5
        }),
        template: `<div>
            <m-typeahead v-model="value" :label="label" :max-results="maxResults" :results="results"></m-typeahead>
            <p>maxResult = {{ maxResults}}</p>
            <h2 class="m-u--h5">Values</h2>
            <p v-html="results"></p>
        </div>`
    }))
    .add('custom results', () => ({
        data: () => ({
            label: 'Fruits and vegetables',
            results: RESULTS,
            value: '',
            maxResults: 5
        }),
        template: `<div>
            <m-typeahead v-model="value" :label="label" :max-results="maxResults" :results="results">
                <template  v-slot:items="{item , index, highlight }">
                   <span v-html="highlight"/><br/>
                   <em class="m-u--typo--precision">{{item}} in the uk</em>
                </template>
            </m-typeahead>

        </div>`
    }))
    .add('filter-results-manually', () => ({
        data: () => ({
            placeholder: 'Fruits and vegetables',
            results: RESULTS,
            filterResult: [],
            loddingResults: false,
            value: ''
        }),
        methods: {
            onFilter(): void {
                let _this: any = this as any;
                _this.loddingResults = true;
                setTimeout(() => {
                    _this.filterResult = _this.results.filter(r => {
                        if (_this.value) {
                            return r.toLowerCase().includes(_this.value.toLowerCase());
                        }
                    }).sort();
                    _this.loddingResults = false;
                }, 1000);
            }
        },
        template: `<div>
            <m-typeahead v-model="value" :filter-results-manually="true" :throttle="500" :placeholder="placeholder" :results="filterResult" :waiting-results="loddingResults" @filter-results="onFilter"></m-typeahead>
            <h2 class="m-u--h5">Results</h2>
            <p v-html="results"></p>
        </div>`
    }))
    .add('state', () => ({
        data: () => ({
            results: RESULTS,
            value: 'Apple'
        }),
        template: `<div>
            <m-typeahead v-model="value"
                         label="Disabled"
                         :results="results"
                         :disabled="true"></m-typeahead>
            <m-typeahead v-model="value"
                         label="Readonly"
                         :results="results"
                         :readonly="true"></m-typeahead>
            <m-typeahead v-model="value"
                         label="Waiting"
                         :results="results"
                         :waiting="true"></m-typeahead><br>
            <m-typeahead v-model="value"
                         label="Disabled and error"
                         :results="results"
                         :disabled="true"
                         error-message="Error"></m-typeahead>
            <m-typeahead v-model="value"
                         label="Readonly and error"
                         :results="results"
                         :readonly="true"
                         error-message="Error"></m-typeahead>
            <m-typeahead v-model="value"
                         label="Waiting and error"
                         :results="results"
                         :waiting="true"
                         error-message="Error"></m-typeahead><br>
            <m-typeahead v-model="value"
                         label="Disabled and readonly"
                         :results="results"
                         :disabled="true"
                         :readonly="true"></m-typeahead>
            <m-typeahead v-model="value"
                         label="Disabled and waiting"
                         :results="results"
                         :disabled="true"
                         :waiting="true"></m-typeahead>
            <m-typeahead v-model="value"
                         label="Readonly and waiting"
                         :results="results"
                         :readonly="true"
                         :waiting="true"></m-typeahead>
            <m-typeahead v-model="value"
                         label="Disabled, readonly and waiting"
                         :results="results"
                         :disabled="true"
                         :readonly="true"
                         :waiting="true"></m-typeahead>
        </div>`
    }));

storiesOf(`${modulComponentsHierarchyRootSeparator}${TYPEAHEAD_NAME}/mobile`, module)
    .addParameters({ viewport: { defaultViewport: 'iphone6' } })
    .add('iphone6', () => ({
        data: () => ({
            label: 'Fruits and vegetables',
            results: RESULTS,
            value: ''
        }),
        template: `<div>
            <m-typeahead v-model="value" :label="label" :results="results"></m-typeahead>
            <h2 class="m-u--h5">Results</h2>
            <p v-html="results"></p>
        </div>`
    })
    );
