// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-typeahead Default 1`] = `
<div>
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--has-label m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Fruits and vegetables
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p>
    v-model = 
  </p>
   
  <h2
    class="m-u--h5"
  >
    Values
  </h2>
   
  <p>
    [
  "Tomato",
  "Celery",
  "Apple",
  "Bannana",
  "Patate",
  "Carrot",
  "Avocados",
  "Eggplant",
  "Beet",
  "Pineapple",
  "Lemon",
  "Pumpkin",
  "Kiwi"
]
  </p>
</div>
`;

exports[`Storyshots modul-components|m-typeahead custom results 1`] = `
<div>
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--has-label m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Fruits and vegetables
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-typeahead filter-results-manually 1`] = `
<div>
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <span
                class="m-input-style__label"
                style="z-index: -1;"
              >
                <span
                  class="m-input-style__text"
                />
              </span>
               
              <div
                class="m-input-style__input"
              >
                <div
                  class="m-input-style__prefix"
                />
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    placeholder="Fruits and vegetables"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <h2
    class="m-u--h5"
  >
    Results
  </h2>
   
  <p>
    [
  "Tomato",
  "Celery",
  "Apple",
  "Bannana",
  "Patate",
  "Carrot",
  "Avocados",
  "Eggplant",
  "Beet",
  "Pineapple",
  "Lemon",
  "Pumpkin",
  "Kiwi"
]
  </p>
</div>
`;

exports[`Storyshots modul-components|m-typeahead max-results 1`] = `
<div>
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--has-label m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Fruits and vegetables
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p>
    maxResult = 5
  </p>
   
  <h2
    class="m-u--h5"
  >
    Values
  </h2>
   
  <p>
    [
  "Tomato",
  "Celery",
  "Apple",
  "Bannana",
  "Patate",
  "Carrot",
  "Avocados",
  "Eggplant",
  "Beet",
  "Pineapple",
  "Lemon",
  "Pumpkin",
  "Kiwi"
]
  </p>
</div>
`;

exports[`Storyshots modul-components|m-typeahead state 1`] = `
<div>
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-disabled m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    disabled="disabled"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-readonly m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Readonly
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    readonly="readonly"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-waiting m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-label-up m--is-waiting m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Waiting
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
   
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-disabled m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled and error
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    disabled="disabled"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-typeahead m--has-validation-message"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-readonly m--has-error m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--has-error m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Readonly and error
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    readonly="readonly"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <p
          class="m-validation-message__error"
        >
          <svg
            class="m-icon m-validation-message__icon"
            height="1em"
            width="1em"
          >
            <title>
              Erreur
            </title>
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <span
            class="m-validation-message__text"
          >
            Error
          </span>
        </p>
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-typeahead m--has-validation-message"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-waiting m--has-error m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-label-up m--is-waiting m--has-error m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Waiting and error
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <p
          class="m-validation-message__error"
        >
          <svg
            class="m-icon m-validation-message__icon"
            height="1em"
            width="1em"
          >
            <title>
              Erreur
            </title>
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <span
            class="m-validation-message__text"
          >
            Error
          </span>
        </p>
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
   
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-disabled m--is-readonly m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled and readonly
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    disabled="disabled"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    readonly="readonly"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-disabled m--is-waiting m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-label-up m--is-disabled m--is-waiting m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled and waiting
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    disabled="disabled"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-readonly m--is-waiting m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--is-waiting m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Readonly and waiting
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    readonly="readonly"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--is-disabled m--is-readonly m--is-waiting m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--is-readonly m--is-label-up m--is-disabled m--is-waiting m--has-label m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Disabled, readonly and waiting
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    disabled="disabled"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    readonly="readonly"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <div
                    class="m-spinner m-input-style__spinner"
                  >
                    <!---->
                     
                    <div />
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-typeahead/mobile iphone6 1`] = `
<div>
  <div
    class="m-base-select m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        aria-controls="m-typeahead-fakeId-controls"
        aria-haspopup="true"
        class="m-textfield m--has-label m--is-type-text"
        cursor-pointer="true"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style m--has-label m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mTextfield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Fruits and vegetables
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    class="m-textfield__input"
                    id="mTextfield-fakeId"
                    maxlength="Infinity"
                    type="text"
                  />
                     
                  <!---->
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <!---->
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-textfield__validation"
        >
          <div
            class="m-validation-message m-textfield__validation__message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-typeahead__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
      
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <h2
    class="m-u--h5"
  >
    Results
  </h2>
   
  <p>
    [
  "Tomato",
  "Celery",
  "Apple",
  "Bannana",
  "Patate",
  "Carrot",
  "Avocados",
  "Eggplant",
  "Beet",
  "Pineapple",
  "Lemon",
  "Pumpkin",
  "Kiwi"
]
  </p>
</div>
`;
